--- a/citi/templates/base.jinja
+++ b/citi/templates/base.jinja
@@ -103,7 +103,7 @@
 			<ul class="normal nav-link clear center">
 				<li class="left"><a class="block white" href="{{ url('home') }}">首页</a></li>
 				<li class="left"><a class="block white" href="{{ url('crowdfunding.project.list') }}">众筹项目</a></li>
-				<li class="left"><a class="block white" href="#">问答讨论</a></li>
+				<li class="left"><a class="block white" href="{{ url('question.list') }}">问答讨论</a></li>
 				<li class="left"><a class="block white" href="#">新手帮助</a></li>
 				<li class="left"><a class="block white" href="{{ url('crowdfunding.publish.content') }}">发起项目</a></li>
 			</ul>
