--- a/citi/templates/base.jinja
+++ b/citi/templates/base.jinja
@@ -104,7 +104,7 @@
 				<li class="left"><a class="block white" href="{{ url('home') }}">首页</a></li>
 				<li class="left"><a class="block white" href="{{ url('crowdfunding.project.list') }}">众筹项目</a></li>
 				<li class="left"><a class="block white" href="{{ url('question.list') }}">问答讨论</a></li>
-				<li class="left"><a class="block white" href="#">新手帮助</a></li>
+				<li class="left"><a class="block white" href="{{ url('page.help') }}">新手帮助</a></li>
 				<li class="left"><a class="block white" href="{{ url('crowdfunding.publish.content') }}">发起项目</a></li>
 			</ul>
 		</div>
