--- a/citi/apps/account/templates/login.jinja
+++ b/citi/apps/account/templates/login.jinja
@@ -47,7 +47,7 @@
                             </div>
                             <input id="real_chkbox" name="remenber" type="checkbox" style="display:none">
 
-                            <p>还没有账号？立即<a href="#">免费注册</a></p>
+                            <p>还没有账号？立即<a href="{{ url('registration_register') }}">免费注册</a></p>
                         </div>
                         <button class="submit" type="submit">登&nbsp&nbsp录</button>
                     </form>
